# Lista_Funcao

./: README.md
Ex1/: CMakeLists.txt  Ex1Main.cpp  Ex1Test.cpp  Makefile
Ex1/inc/: Ex1.h
Ex1/src/: Ex1.cpp
Ex10/: CMakeLists.txt  Ex10Main.cpp  Ex10Test.cpp
Ex10/inc/: Ex10.h
Ex10/main/: Ex10.cpp
Ex10/src/: Ex10.cpp
Ex11/: CMakeLists.txt  Ex11Main.cpp  Ex11Test.cpp
Ex11/inc/: Ex11.h
Ex11/main/: Ex11.cpp
Ex11/src/: Ex11.cpp
Ex12/: CMakeLists.txt  Ex12Test.cpp  Ex12main.cpp
Ex12/inc/: Ex12.h
Ex12/main/: Ex12.cpp
Ex12/src/: Ex12.cpp
Ex13/: CMakeLists.txt  Ex13Main.cpp  Ex13Test.cpp
Ex13/inc/: Ex13.h
Ex13/main/: Ex13.cpp
Ex13/src/: Ex13.cpp
Ex14/: CMakeLists.txt  Ex14.cpp  Ex14Main.cpp  Ex14Test.cpp
Ex14/inc/: Ex14.h
Ex14/main/: Ex14.cpp
Ex14/src/: Ex14.cpp
Ex15/: CMakeLists.txt  Ex15Main.cpp  Ex15Test.cpp
Ex15/inc/: Ex15.h
Ex15/src/: Ex15.cpp
Ex16/: Ex16Main.cpp  Ex16Test.cpp
Ex16/inc/: Ex16.h
Ex16/src/: Ex16.cpp
Ex17/: Ex17Main.cpp  Ex17Test.cpp
Ex17/inc/: Ex17.h
Ex17/src/: Ex17.cpp
Ex18/: Ex18Main.cpp  Ex18Test.cpp
Ex18/inc/: Ex18.h
Ex18/src/: Ex18.cpp
Ex19/: Ex19Main.cpp  Ex19Test.cpp
Ex19/inc/: Ex19.h
Ex19/src/: Ex19.cpp
Ex2/: CMakeLists.txt  Ex2Main.cpp  Ex2Test.cpp
Ex2/inc/: Ex2.h
Ex2/main/: Ex2.cpp
Ex20/: Ex20Main.cpp  Ex20Test.cpp
Ex20/src/: Ex20.cpp
Ex21/: Ex21Main.cpp  Ex21Test.cpp
Ex21/inc/: Ex21.h
Ex21/src/: Ex21.cpp
Ex22/: Ex22Main.cpp  Ex22Test.cpp
Ex22/inc/: Ex22.h
Ex22/src/: Ex22.cpp
Ex23/: Ex23Main.cpp  Ex23Test.cpp
Ex23/src/: Ex23.cpp
Ex24/: CMakeLists.txt  Ex24Main.cpp  Ex24Test.cpp
Ex24/inc/: Ex24.h
Ex24/src/: Ex24.cpp
Ex25/: Ex25Main.cpp  Ex25Test.cpp
Ex25/inc/: Ex25.h
Ex25/src/: Ex25.cpp
Ex26/: CMakeLists.txt  Ex26Main.cpp  Ex26Test.cpp
Ex26/inc/: Ex26.h
Ex26/src/: Ex26.cpp
Ex27/: CMakeLists.txt  Ex27Main.cpp  Ex27Test.cpp
Ex27/inc/: Ex27.h
Ex27/src/: Ex27.cpp
Ex28/: CMakeLists.txt  Ex28Main.cpp  Ex28Test.cpp
Ex28/inc/: Ex28.h
Ex28/src/: Ex28.cpp
Ex29/: CMakeLists.txt  Ex29Main.cpp  Ex29Test.cpp
Ex29/inc/: Ex29.h
Ex29/src/: Ex29.cpp
Ex3/: CMakeLists.txt  Ex3Main.cpp  Ex3Test.cpp
Ex3/inc/: Ex3.h
Ex3/main/: Ex3.cpp
Ex3/src/: Ex3.cpp
Ex30/: CMakeLists.txt  Ex30Main.cpp  Ex30Test.cpp
Ex30/inc/: Ex30.h
Ex30/src/: Ex30.cpp
Ex31/: CMakeLists.txt  Ex31Main.cpp  Ex31Test.cpp
Ex31/inc/: Ex31.h
Ex31/src/: Ex31.cpp
Ex32/: CMakeLists.txt  Ex32Main.cpp  Ex32Test.cpp
Ex32/inc/: Ex32.h
Ex32/src/: Ex32.cpp
Ex33/: CMakeLists.txt  Ex33Main.cpp  Ex33Test.cpp
Ex33/inc/: Ex33.h
Ex33/src/: Ex33.cpp
Ex34/: CMakeLists.txt  Ex34Main.cpp  Ex34Test.cpp
Ex34/inc/: Ex34.h
Ex34/src/: Ex34.cpp
Ex35/: CMakeLists.txt  Ex35Main.cpp  Ex35Test.cpp
Ex35/inc/: Ex35.h
Ex35/src/: Ex35.cpp
Ex36/: CMakeLists.txt  Ex36Main.cpp  Ex36Test.cpp
Ex36/inc/: Ex36.h
Ex36/src/: Ex36.cpp
Ex37/: CMakeLists.txt  Ex37Main.cpp  Ex37Test.cpp
Ex37/inc/: Ex37.h
Ex37/src/: Ex37.cpp
Ex38/: CMakeLists.txt  Ex38Main.cpp  Ex38Test.cpp
Ex38/inc/: Ex38.h
Ex38/src/: Ex38.cpp
Ex39/: CMakeLists.txt  Ex39Main.cpp  Ex39Test.cpp
Ex39/inc/: Ex39.h
Ex39/src/: Ex39.cpp
Ex4/: CMakeLists.txt  Ex4Test.cpp  Ex4main.cpp
Ex4/inc/: Ex4.h
Ex4/main/: Ex4.cpp
Ex4/src/: Ex4.cpp
Ex40/: CMakeLists.txt  Ex40Main.cpp  Ex40Test.cpp
Ex40/inc/: Ex40.h
Ex40/src/: Ex40.cpp
Ex41/: CMakeLists.txt  Ex41Main.cpp  Ex41Test.cpp
Ex41/inc/: Ex41.h
Ex41/src/: Ex41.cpp
Ex42/: CMakeLists.txt  Ex42Main.cpp  Ex42Test.cpp
Ex42/inc/: Ex42.h
Ex42/src/: Ex42.cpp
Ex43/: CMakeLists.txt  Ex43Main.cpp  Ex43Test.cpp
Ex43/inc/: Ex43.h
Ex43/src/: Ex43.cpp
Ex44/: Ex44.cpp
Ex46/: CMakeLists.txt  Ex46Main.cpp  Ex46Test.cpp
Ex46/inc/: Ex46.h
Ex46/src/: Ex46.cpp
Ex47/: CMakeLists.txt  Ex47Main.cpp  Ex47Test.cpp
Ex47/inc/: Ex47.h
Ex47/src/: Ex47.cpp
Ex48/: CMakeLists.txt  Ex48Main.cpp  Ex48Test.cpp
Ex48/inc/: Ex48.h
Ex48/src/: Ex48.cpp
Ex49/: CMakeLists.txt  Ex49Main.cpp  Ex49Test.cpp
Ex49/inc/: Ex49.h
Ex49/src/: Ex49.cpp
Ex5/: CMakeLists.txt  Ex5Test.cpp  Ex5main.cpp
Ex5/inc/: Ex5.h
Ex50/: CMakeLists.txt  Ex50Main.cpp  Ex50Test.cpp
Ex50/inc/: Ex50.h
Ex50/src/: Ex50.cpp
Ex51/: CMakeLists.txt  Ex51Main.cpp  Ex51Test.cpp
Ex51/inc/: Ex51.h
Ex51/src/: Ex51.cpp
Ex52/: CMakeLists.txt  Ex52Main.cpp  Ex52Test.cpp
Ex53/: CMakeLists.txt  Ex53Main.cpp  Ex53Test.cpp
Ex54/: CMakeLists.txt  Ex54Main.cpp  Ex54Test.cpp
Ex55/: CMakeLists.txt  Ex55Main.cpp  Ex55Test.cpp
Ex56/: CMakeLists.txt  Ex56Main.cpp  Ex56Test.cpp
Ex56/inc/: Ex56.h
Ex56/src/: Ex56.cpp
Ex57/: CMakeLists.txt  Ex57Main.cpp  Ex57Test.cpp
Ex57/inc/: Ex57.h
Ex57/src/: Ex57.cpp
Ex58/: CMakeLists.txt  Ex58Main.cpp  Ex58Test.cpp
Ex58/inc/: Ex58.h
Ex58/src/: Ex58.cpp
Ex59/: CMakeLists.txt  Ex59Main.cpp  Ex59Test.cpp
Ex59/inc/: Ex59.h
Ex59/src/: Ex59.cpp
Ex6/: CMakeLists.txt  Ex6Main.cpp  Ex6Test.cpp
Ex6/inc/: Ex6.h
Ex6/src/: Ex6.cpp
Ex60/: CMakeLists.txt  Ex60Main.cpp  Ex60Test.cpp
Ex61/: CMakeLists.txt  Ex61Main.cpp  Ex61Test.cpp
Ex61/inc/: Ex61.h
Ex61/src/: Ex61.cpp
Ex62/: CMakeLists.txt  Ex62Main.cpp  Ex62Test.cpp
Ex63/: CMakeLists.txt  Ex63Main.cpp  Ex63Test.cpp
Ex63/inc/: Ex63.h
Ex63/src/: Ex63.cpp
Ex64/: CMakeLists.txt  Ex64Main.cpp  Ex64Test.cpp
Ex64/inc/: Ex64.h
Ex64/src/: Ex64.cpp
Ex65/: CMakeLists.txt  Ex65Main.cpp  Ex65Test.cpp
Ex66/: CMakeLists.txt  Ex66Test.cpp
Ex67/: CMakeLists.txt  Ex67Main.cpp  Ex67Test.cpp
Ex68/: CMakeLists.txt  Ex68  Ex68Main.cpp  Ex68Test.cpp
Ex68/inc/: Ex68.h
Ex68/src/: Ex68.cpp
Ex69/: CMakeLists.txt  Ex69Main.cpp  Ex69Test.cpp
Ex7/: CMakeLists.txt  Ex7Test.cpp  Ex7main.cpp
Ex70/: CMakeLists.txt  Ex70Main.cpp  Ex70Test.cpp
Ex71/: CMakeLists.txt  Ex71Main.cpp  Ex71Test.cpp
Ex72/: CMakeLists.txt  Ex72Main.cpp  Ex72Test.cpp
Ex72/inc/: Ex72.h
Ex72/main/: Ex72.cpp
Ex73/: CMakeLists.txt  Ex73Main.cpp  Ex73Test.cpp
Ex73/inc/: Ex73.h
Ex73/src/: Ex73.cpp
Ex8/: CMakeLists.txt  Ex8Test.cpp  Ex8main.cpp
Ex9/: CMakeLists.txt  Ex9Main.cpp  Ex9Test.cpp
(+32 files in other folders)
